k8s/deployment-estadisticas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estadisticas-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: estadisticas-service
  template:
    metadata:
      labels:
        app: estadisticas-service
    spec:
      containers:
      - name: estadisticas
        image: gcr.io/sa-proyecto-475802/sa-estadisticas:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8030
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: estadisticas-service
  namespace: default
spec:
  selector:
    app: estadisticas-service
  ports:
  - port: 8030
    targetPort: 8030
  type: ClusterIP
